# ClassroomFinder

./: .gitignore  Cargo.toml  LICENSE  Node.Py  Node.py  README.md  Shuttle.toml  index.html  main.py  nodes.json  requirements.txt  vercel.json
assets/: about.html  broken_nodes.json  editor.html  home.css  home.html  index.html  nodes.json  verifyjson.py
assets/about/: about.html
assets/editor/: editor.html  script.js
assets/find_room/: home.html  script.js
assets/input/: index.html  script.js
assets/path/: home.html  script.js
src/: main.rs  path.rs  webpages.rs
templates/: editor.html  home.css  home.html
