[package]
name = "class-test-proj"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-runtime = "0.47.0"
tokio = "1.26.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
image = "0.25.2"
axum = {version = "0.7.5", features = ["multipart"]}
shuttle-axum = "0.47.0"
tower-http = { version = "0.5.2", features = ["fs"] }

