[package]
name = "class-test-proj"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-runtime = "0.52.0"
tokio = "1.26.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
image = "0.25.2"
axum = {version = "0.7.5", features = ["multipart"]}
shuttle-axum = "0.52.0"
tower-http = { version = "0.5.2", features = ["fs"] }
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
futures = "0.3.30"
shuttle-actix-web = "0.52.0"
log = "0.4.22"
web-sys = "0.3.70"
regex = "1.10.6"
lazy_static = "1.5.0"
env_logger = "0.11.8"
